Revert "Update Level.java - gradle crash fix"
This reverts commit 1fdd75fb917dad4254ffe8f9a368de0bcc68a3b8.